# syft_experimental

./: .gitignore  README.md
.github/workflows/: python.yml  rust.yml
protos/: helloworld.proto  message.proto  node.proto
syft/: Cargo.toml  build.rs
syft/src/: lib.rs
syft/src/capabilities/: helloworld.rs  message.rs  mod.rs  node.rs
syft/src/client/: client_runtime.rs  connect.rs
syft/src/message/: message.rs  mod.rs
syft/src/worker/: config.rs  grpc_server.rs  mod.rs
