[package]
name    = "syft"
version = "0.1.0"
authors = ["Ben Szymkow <simcof@gmail.com>", "Madhava Jay <me@madhavajay.com>"]
edition = "2018"

[lib]
name = "syft"

[dependencies]
tokio       = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
tonic       = { version = "0.4.3", features = ["transport"] }
prost       = "0.7.0"
lazy_static = "1.4.0"
uuid        = { version = "0.8.2", features = ["v4"] }
url         = "2.2.2"

[build-dependencies]
tonic-build = "0.4.2"
